[package]
name = "home-still"
version = "0.1.0"
authors = ["Jorge Nin <jorgenin@mit.edu>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "home-still"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow       = "1.0.98"
shtcx        = "1.0.0"
toml-cfg     = "0.2.0"
wifi         = { path = "./common/lib/wifi" }
embedded-svc = "0.28.1"
esp-idf-sys = "0.36.1"


[build-dependencies]
embuild = "0.33"
toml-cfg     = "0.2.0"
