[package]
name    = "wifi"
version = "0.1.0"
edition = "2024"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]

[dependencies]
anyhow      = "1.0.98"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log         = "0.4.27"

[build-dependencies]
embuild = "0.33.0"

[dev-dependencies]
toml-cfg = "0.2.0"
